--- a/HW2/hw2.ipynb
+++ b/HW2/hw2.ipynb
@@ -8,24 +8,26 @@
    "source": [
     "import ace_tools_open as tools\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from utils import generate_gaussian_A, generate_t_distribution_A, compute_matrices, compute_left_singular_vectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import generate_gaussian_A, generate_t_distribution_A, compute_matrices\n",
-    "\n",
-    "n, d = 100, 20\n",
+    "n, d = 500, 50\n",
     "seed = 1234  \n",
     "\n",
     "A_GA = generate_gaussian_A(n, d, seed=seed)\n",
     "A_T3 = generate_t_distribution_A(n, d, df=3, seed=seed)\n",
     "A_T1 = generate_t_distribution_A(n, d, df=1, seed=seed)\n",
     "\n",
+    "U_A_GA = compute_left_singular_vectors(A_GA)\n",
+    "U_A_T3 = compute_left_singular_vectors(A_T3)\n",
+    "U_A_T1 = compute_left_singular_vectors(A_T1)\n",
     "\n",
     "results_GA = compute_matrices(A_GA)\n",
     "results_T3 = compute_matrices(A_T3)\n",
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +49,7 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"itables_d60ee3fd_a5b2_4fa8_b4ee_b9393a048df7\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
+       "<table id=\"itables_dfafdd08_58a1_4951_a932_f5d63779e695\" class=\"display nowrap\" data-quarto-disable-processing=\"true\" style=\"table-layout:auto;width:auto;margin:auto;caption-side:bottom\">\n",
        "<thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
@@ -156,12 +158,12 @@
        "<script type=\"module\">\n",
        "    import {DataTable, jQuery as $} from 'https://www.unpkg.com/dt_for_itables@2.0.13/dt_bundle.js';\n",
        "\n",
-       "    document.querySelectorAll(\"#itables_d60ee3fd_a5b2_4fa8_b4ee_b9393a048df7:not(.dataTable)\").forEach(table => {\n",
+       "    document.querySelectorAll(\"#itables_dfafdd08_58a1_4951_a932_f5d63779e695:not(.dataTable)\").forEach(table => {\n",
        "        if (!(table instanceof HTMLTableElement))\n",
        "            return;\n",
        "\n",
        "        // Define the table data\n",
-       "        const data = [[\"GA\", 2739.7, 4.472136, 4.472136], [\"T3\", 7209.734, 4.472136, 4.472136], [\"T1\", 1835179.0, 4.472136, 4.472136]];\n",
+       "        const data = [[\"GA\", 30901.39, 7.071068, 7.071068], [\"T3\", 82016.01, 7.071068, 7.071068], [\"T1\", 281064200.0, 7.071068, 7.071068]];\n",
        "\n",
        "        // Define the dt_args\n",
        "        let dt_args = {\"layout\": {\"topStart\": null, \"topEnd\": null, \"bottomStart\": null, \"bottomEnd\": null}, \"order\": [], \"warn_on_selected_rows_not_rendered\": true};\n",
