--- a/HW2/hw2.ipynb
+++ b/HW2/hw2.ipynb
@@ -9,12 +9,17 @@
     "import ace_tools_open as tools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from utils import generate_gaussian_A, generate_t_distribution_A, compute_matrices, compute_left_singular_vectors"
+    "from utils import (generate_gaussian_A, \n",
+    "                   generate_t_distribution_A, \n",
+    "                   compute_matrices, \n",
+    "                   compute_left_singular_vectors,\n",
+    "                   basic_matrix_multiplication,\n",
+    "                   compute_sampling_probabilities)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +37,60 @@
     "results_GA = compute_matrices(A_GA)\n",
     "results_T3 = compute_matrices(A_T3)\n",
     "results_T1 = compute_matrices(A_T1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n, m, p_dim = 100, 50, 30\n",
+    "A = np.random.randn(m, n)\n",
+    "B = np.random.randn(n, p_dim)\n",
+    "\n",
+    "p_uniform = compute_sampling_probabilities(A, B, method=\"uniform\")\n",
+    "p_norm_based = compute_sampling_probabilities(A, B, method=\"norm_based\")\n",
+    "p_frobenius = compute_sampling_probabilities(A, B, method=\"frobenius_based\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00726193, 0.00918067, 0.01044843, 0.00587184, 0.00966831,\n",
+       "       0.01011255, 0.0086509 , 0.0096505 , 0.00748781, 0.00851078,\n",
+       "       0.01014612, 0.00860114, 0.00934747, 0.01092409, 0.01337041,\n",
+       "       0.00953368, 0.00908265, 0.01334572, 0.0092769 , 0.00973508,\n",
+       "       0.01064198, 0.00802649, 0.01181972, 0.00685901, 0.01221402,\n",
+       "       0.00907783, 0.00765799, 0.00900048, 0.00957116, 0.01202297,\n",
+       "       0.01035526, 0.01300414, 0.00896393, 0.00859246, 0.01305467,\n",
+       "       0.00824103, 0.01127975, 0.013511  , 0.00934684, 0.00999462,\n",
+       "       0.01477392, 0.00966084, 0.01131917, 0.01267354, 0.0099235 ,\n",
+       "       0.00971435, 0.00697256, 0.01339958, 0.0100854 , 0.00705397,\n",
+       "       0.01108113, 0.01298234, 0.01040965, 0.01146493, 0.01111769,\n",
+       "       0.00933728, 0.00810555, 0.01130628, 0.0109618 , 0.0101586 ,\n",
+       "       0.00988946, 0.00920497, 0.00820734, 0.01036287, 0.00812588,\n",
+       "       0.00642668, 0.00955518, 0.00741541, 0.00786759, 0.00902768,\n",
+       "       0.0092701 , 0.01042856, 0.00942432, 0.01215918, 0.01269382,\n",
+       "       0.00976571, 0.00760726, 0.01172017, 0.01483549, 0.01208202,\n",
+       "       0.01062749, 0.01268373, 0.01138013, 0.0101694 , 0.00912738,\n",
+       "       0.01338425, 0.00868764, 0.00763779, 0.00845605, 0.00702617,\n",
+       "       0.01064929, 0.01257419, 0.00901922, 0.00688125, 0.00986563,\n",
+       "       0.00895967, 0.0112709 , 0.0077289 , 0.01477779, 0.00707902])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_frobenius"
    ]
   },
   {
